2002-02-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* allroots.cpp: Don't give up prematurely.
	* contour.cpp: Reorder contours.
